# web_module_02

./: Dockerfile  pyproject.toml
bot_assistant/: bot_interface.py  bot_logic.py  main.py
